# monorepo-dependabot-config

./: .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: release.yml  rust.yml
docs/: default-rules-support.md
docs/maintenance/: maintenance-plan.md
docs/prd/: enhancement.md  stabilization.md
docs/specs/: stabilization-implementation-spec.md
examples/: terraform-find.yml
examples/no-default-config/01-terraform-simple-find/: config.yml  expected_generated_config.yml
src/: main.rs  strucs.rs  structs.rs
tests/: smoke_test.rs
